source/tests/errors/duplicate_function.apex
function dup()
    return 1

function dup()
    return 2